--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
 
     <div class="container">
-    <h2>Mi lista de tareas</h2>
-    <p id="pa1">Haz doble clic en una tarea para marcarla como completada</p>
-
-
+        <h2>Mi lista de tareas</h2>
+        <p id="pa1">Haz doble clic en una tarea para marcarla como completada</p>
+        <input type="text" id="display" placeholder="escriba una asignación">
+        <button id="agregar">Añadir</button><br>
+        <div class="container2">
+            
+        </div>
+        <button id="eliminar">Eliminar completados</button>
+        <button id="vaciar">Vaciar lista</button>
+        <button id="guardar">Guardar lista</button>
 
 
 
