--- a/index.html
+++ b/index.html
@@ -12,23 +12,11 @@
 
     <div class="container">
         <h2>Mi lista de tareas</h2>
-        <p id="pa1">Haz doble clic en una tarea para marcarla como completada</p>
+        <p id="pa1">Agrega actividades a tu lista de tareas</p>
         <input type="text" id="display" placeholder="escriba una asignación">
         <button id="agregar">Añadir</button><br>
-        <div class="container2">
-            
-        </div>
-        <button id="eliminar">Eliminar completados</button>
-        <button id="vaciar">Vaciar lista</button>
-        <button id="guardar">Guardar lista</button>
-
-
-
-
-
+        <ul id="tarealist"></ul>
     </div>
-
-
     <script src="index.js"></script>
 </body>
 
