Cuarto commit desde VSC

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <h2>Mi lista de tareas</h2>
+        <h2>Programa Para Lista de Tareas</h2>
         <p id="pa1">Agrega actividades a tu lista de tareas</p>
         <input type="text" id="display" placeholder="escriba una asignación">
         <button id="agregar">Añadir</button><br>
